[package]
name = "sdk-farmer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytesize = "1.2.0"
derivative = "2.2.0"
derive_builder = "0.12"
derive_more = "0.99"
futures = "0.3"
lru = "0.10"
parking_lot = "0.12"
pin-project = "1"
sdk-traits = { path = "../traits" }
sdk-utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "a5336b5f501d8a5fed5bac88b1e82459043708e2" }
subspace-erasure-coding = { git = "https://github.com/subspace/subspace", rev = "a5336b5f501d8a5fed5bac88b1e82459043708e2" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "a5336b5f501d8a5fed5bac88b1e82459043708e2" }
subspace-farmer-components = { git = "https://github.com/subspace/subspace", rev = "a5336b5f501d8a5fed5bac88b1e82459043708e2" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "a5336b5f501d8a5fed5bac88b1e82459043708e2" }
subspace-proof-of-space = { git = "https://github.com/subspace/subspace", rev = "a5336b5f501d8a5fed5bac88b1e82459043708e2", features = ["parallel", "chia"] }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "a5336b5f501d8a5fed5bac88b1e82459043708e2" }
thiserror = "1"
tokio = { version = "1.28.2", features = ["fs", "rt", "tracing", "macros", "parking_lot", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2"

[features]
default = []
integration-test = [
    "sdk-utils/integration-test",
    "sdk-traits/integration-test"
]
