[package]
name = "sdk-farmer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytesize = "1.2.0"
derivative = "2.2.0"
derive_builder = "0.12"
derive_more = "0.99"
futures = "0.3"
lru = "0.11.0"
parking_lot = "0.12"
pin-project = "1"
rayon = "1.7.0"
sdk-traits = { path = "../traits" }
sdk-utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-erasure-coding = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-farmer-components = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-proof-of-space = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da", features = ["parallel"] }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
thiserror = "1"
tokio = { version = "1.34.0", features = ["fs", "rt", "tracing", "macros", "parking_lot", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2"

[features]
default = []
integration-test = [
    "sdk-utils/integration-test",
    "sdk-traits/integration-test"
]
