[package]
name = "sdk-node"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
backoff = "0.4"
cross-domain-message-gossip = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
derivative = "2.2.0"
derive_builder = "0.12"
derive_more = "0.99"
domain-client-message-relayer = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
domain-client-operator = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
domain-eth-service = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
domain-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
domain-service = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
evm-domain-runtime = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
fp-evm = { version = "3.0.0-dev", git = "https://github.com/subspace/frontier", rev = "37ee45323120b21adc1d69ae7348bd0f7282eeae" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
futures = "0.3"
hex-literal = "0.4"
pallet-rewards = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
pallet-subspace = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
parity-scale-codec = "3.6.3"
parking_lot = "0.12"
pin-project = "1"
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sc-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sc-network-sync = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c", default-features = false }
sc-storage-monitor = { version = "0.1.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c", default-features = false }
sc-subspace-chain-specs = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sdk-dsn = { path = "../dsn" }
sdk-substrate = { path = "../substrate" }
sdk-traits = { path = "../traits" }
sdk-utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sp-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sp-domains = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
sp-domains-fraud-proof = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
sp-messenger = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
sp-version = { version = "22.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-farmer-components = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-runtime = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
subspace-service = { git = "https://github.com/subspace/subspace", rev = "69ac2b4e217d7020e2688744a6d38df61b3885da" }
tokio = { version = "1.34.0", features = ["fs", "rt", "tracing", "macros", "parking_lot", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
tracing = "0.1"

[features]
default = []
integration-test = [
    "sdk-utils/integration-test",
    "sdk-dsn/integration-test",
    "sdk-substrate/integration-test",
    "sdk-traits/integration-test"
]
