[package]
name = "sdk-traits"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
parking_lot = "0.12"
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sdk-dsn = { path = "../dsn" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "7f3001167ddcb2f5ecedd7c00d699361378366b9" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "7f3001167ddcb2f5ecedd7c00d699361378366b9" }
subspace-proof-of-space = { git = "https://github.com/subspace/subspace", rev = "7f3001167ddcb2f5ecedd7c00d699361378366b9" }

[features]
default = []
integration-test = [
    "sdk-dsn/integration-test"
]
