[package]
name = "sdk-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
base58 = "0.2"
blake2 = "0.10.5"
bytesize = "1"
bytesize-serde = "0.2"
derivative = "2.2.0"
derive_more = "0.99"
futures = "0.3"
jsonrpsee-core = "0.16"
libp2p-core = "0.39"
parity-scale-codec = "3"
serde = { version = "1", features = ["derive"] }
ss58-registry = "1.33"
thiserror = "1"
tokio = { version = "1", features = ["rt", "tracing"] }

frame-support = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71", default-features = false }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71", default-features = false }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71", default-features = false }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71", default-features = false }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sp-core-hashing = { version = "9.0.0", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sp-storage = { version = "13.0.0", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }

sc-consensus-subspace-rpc = { git = "https://github.com/subspace/subspace", rev = "a98573ec87cf9b3f2ffb5face4ff1592ff919647" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "a98573ec87cf9b3f2ffb5face4ff1592ff919647" }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "a98573ec87cf9b3f2ffb5face4ff1592ff919647" }
subspace-runtime = { git = "https://github.com/subspace/subspace", rev = "a98573ec87cf9b3f2ffb5face4ff1592ff919647" }
subspace-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "a98573ec87cf9b3f2ffb5face4ff1592ff919647" }

# Unused for now. TODO: add `serde` feature to `subspace-core-primitives` in `subspace-archiver`
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "a98573ec87cf9b3f2ffb5face4ff1592ff919647" }
