[package]
name = "sdk-utils"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
base58 = "0.2"
blake2 = "0.10.5"
bytesize = "1"
bytesize-serde = "0.2"
derivative = "2.2.0"
derive_more = "0.99"
frame-support = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
futures = "0.3"
jsonrpsee-core = "0.16"
libp2p-core = { git = "https://github.com/subspace/rust-libp2p", rev = "7a9328fc0a5f9e28575192d5f4f8663fde6752af" }
parity-scale-codec = "3.6.3"
sc-consensus-subspace-rpc = { git = "https://github.com/subspace/subspace", rev = "dd2a264b0b7747793765d5436b0df5cdcc0e12cd" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1", default-features = false }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1", default-features = false }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1", default-features = false }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.106"
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sp-core-hashing = { version = "9.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sp-storage = { version = "13.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
ss58-registry = "1.33"
# Unused for now. TODO: add `serde` feature to `subspace-core-primitives` in `subspace-archiver`
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "dd2a264b0b7747793765d5436b0df5cdcc0e12cd" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "dd2a264b0b7747793765d5436b0df5cdcc0e12cd" }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "dd2a264b0b7747793765d5436b0df5cdcc0e12cd" }
subspace-runtime = { git = "https://github.com/subspace/subspace", rev = "dd2a264b0b7747793765d5436b0df5cdcc0e12cd" }
subspace-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "dd2a264b0b7747793765d5436b0df5cdcc0e12cd" }
thiserror = "1"
tokio = { version = "1.28.2", features = ["fs", "rt", "tracing", "macros", "parking_lot", "rt-multi-thread", "signal"] }
tracing = "0.1"

[features]
default = []
integration-test = []
